--- a/server/package.json
+++ b/server/package.json
@@ -24,5 +24,10 @@
   "bugs": {
     "url": "https://github.com/gmittal/shokuji/issues"
   },
-  "homepage": "https://github.com/gmittal/shokuji#readme"
+  "homepage": "https://github.com/gmittal/shokuji#readme",
+  "dependencies": {
+    "body-parser": "^1.13.3",
+    "express": "^4.13.3",
+    "request": "^2.61.0"
+  }
 }
