--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,11 @@
   "homepage": "https://github.com/gmittal/shokuji#readme",
   "dependencies": {
     "body-parser": "^1.13.3",
+    "colors": "^1.1.2",
+    "dotenv": "^1.2.0",
     "express": "^4.13.3",
-    "request": "^2.61.0"
+    "querystring": "^0.2.0",
+    "request": "^2.61.0",
+    "shelljs": "^0.5.3"
   }
 }
