--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "colors": "^1.1.2",
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
+    "prettyjson": "^1.1.3",
     "querystring": "^0.2.0",
     "request": "^2.61.0",
     "shelljs": "^0.5.3"
