--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "prettyjson": "^1.1.3",
     "querystring": "^0.2.0",
     "request": "^2.61.0",
-    "shelljs": "^0.5.3"
+    "shelljs": "^0.5.3",
+    "zxing": "^0.1.0"
   }
 }
