--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 
 *.xcuserstate
 
-Shokuji/Shokuji.xcodeproj/project.xcworkspace/xcuserdata/kevin.xcuserdatad/UserInterfaceState.xcuserstate
+ios/Shokuji.xcodeproj/project.xcworkspace/xcuserdata/kevin.xcuserdatad/UserInterfaceState.xcuserstate
