api-ify everything

--- a/server/nutritionize/package.json
+++ b/server/nutritionize/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.14.2",
     "cropng": "^0.1.1",
+    "express": "^4.13.3",
     "shelljs": "^0.5.3"
   }
 }
