--- a/sms/package.json
+++ b/sms/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.14.2",
+    "dotenv": "^1.2.0",
     "express": "^4.13.3",
     "request": "^2.67.0",
     "twilio": "^2.8.0"
