--- a/ios/Shokuji/Info.plist
+++ b/ios/Shokuji/Info.plist
@@ -24,6 +24,7 @@
 	<true/>
 	<key>UIAppFonts</key>
 	<array>
+		<string>Hybrea-Regular.ttf</string>
 		<string>Roboto-Bold.ttf</string>
 		<string>RobotoCondensed-Light.ttf</string>
 	</array>
@@ -32,7 +33,6 @@
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
-		<string>healthkit</string>
 	</array>
 	<key>UIStatusBarHidden</key>
 	<true/>
